allowed overflow on mobile devices to prevent potential spacing issues on dash theme's note single

--- a/static/style/themes/dash/note_single.css
+++ b/static/style/themes/dash/note_single.css
@@ -2,7 +2,12 @@ body{
     margin: 0px;
     padding: 0px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    overflow: hidden;
+}
+
+@media screen and (min-width: 600px) {
+    body{
+        overflow: hidden;
+    }
 }
 
 #menu{
